fix: fix some bugs with drawer (width, overflow-hidden)

--- a/react-sneakers/src/index.scss
+++ b/react-sneakers/src/index.scss
@@ -174,9 +174,8 @@ p {
 }
 .card__item {
   overflow: hidden;
-  //width: 345px;
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   margin-top: 20px;
   padding: 20px;
@@ -191,14 +190,16 @@ p {
     cursor: pointer;
   }
   &-info {
-    padding-right: 13px;
+    padding-right: 30px;
     max-width: 150px;
+    min-width: 150px;
   }
   &-title {
     font-weight: 400;
     font-size: 14px;
     color: #000;
     margin: 0 0 8px 0;
+    word-break: break-word;
   }
   &-button {
     opacity: 0.5;
@@ -359,4 +360,13 @@ p {
     margin-right: 15px;
     transition: transform 0.2s ease-in-out;
   }
+}
+
+.wrap {
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
 }
